tests/paczka1/fuzzy1/67700498.err
Error in line 2: hqiUOvg4JGD S64 19,8
Error in line 11: zwnwum A674 646,3
Error in line 17: NoovdX2W A410 82,6
Error in line 25: byb4McXCaY S64 196,9
